# gesturing

./: .replit  README.md  app.py  custom_gestures.json  gesture_recognition.py  main.py  models.py  pyproject.toml  speech_generator.py
